--- a/README
+++ b/README
@@ -2,7 +2,11 @@ To run program:
     python3 KMeans.py - Runs the KMeans Algorithm of the IRIS Dataset and produces output
     python3 DT.py - Runs the DT based on the ID3 Algorithm on the IRIS Dataset and produces output
 
--------------------------------------------------------
+************************************************************************************
+
+
+Analysis: 
+************************************************************************************
 
 KMeans: Prediction 
 N = 100 ( Noticed that when increasing the value of N, either it being 10,100,500 the accuracy does not change by alot)
@@ -16,7 +20,7 @@ Iris-virginica accuracy: 75%
 Iris-versicolor accuracy: 90%
 Iris-setosa accuracy: 100.00%
 
---------------------------------------------------------
+************************************************************************************
 
 KMeans: Result 
 
@@ -30,7 +34,7 @@ Iris-virginica accuracy: 83.33%
 Iris-versicolor accuracy: 100.00%
 Iris-setosa accuracy: 100.00%
 
----------------------------------------------------------
+************************************************************************************
 
 K-means is a clustering algorithm that groups similar data points together based on their distance to the centroid of the cluster. It is an unsupervised learning algorithm, meaning it does not rely on labelled data to make predictions. 
 
